# supercomp

distributed_memory/17-introducao/: hello  mpi-async.out  mpi-errado1.cpp  mpi-errado1.out
distributed_memory/20-async/: ex0  exemplo0.cpp  exemplo1.cpp  exemplo1.out
distributed_memory/21-collective/: aula21.cpp  aula21.out
multi-core/05-for-paralelo/: m  mandel.cpp
multi-core/06-thread-safety/: pi  pi2  pi3  pi_mc.cpp  pi_mc_p1.c  random.cpp  random.h
multi-core/10-alto-nivel-omp/: exemplo-fs.cpp  igor
multi-core/10-alto-nivel-omp/books/: 57846-0.txt
multi-core/11-granularidade/: exemplo-fs.cpp  make-small-files.py
multi-core/11-granularidade/1/: small-0.txt  small-1.txt  small-10.txt  small-100.txt  small-101.txt  small-102.txt  small-103.txt  small-104.txt  small-105.txt  small-106.txt  small-107.txt  small-108.txt  small-109.txt  small-11.txt  small-110.txt  small-111.txt  small-112.txt  small-113.txt  small-114.txt  small-115.txt  small-116.txt  small-117.txt  small-118.txt  small-119.txt  small-12.txt  small-120.txt  small-121.txt  small-122.txt  small-123.txt  small-124.txt  small-125.txt  small-126.txt  small-127.txt  small-128.txt  small-129.txt  small-13.txt  small-130.txt  small-131.txt  small-132.txt  small-133.txt  (+960 more)
multi-core/11-granularidade/10/: small-0.txt  small-1.txt  small-10.txt  small-100.txt  small-1000.txt  (+9995 more)
multi-core/12-suporte/: CMakeLists.txt  hello_world.cpp
multi-core/13-14-sincronizacao/: cond  cond_var.cpp  prod-cons.cpp  prod.out  rdv  rdv.cpp  rdv_.cpp  respostas.txt  semaphore.cpp  semaphore.h  thread1  thread1.cpp
(+55000 files in other folders)
